--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Windows EXE
+name: Build GUI App for Windows and macOS
 
 on:
   push:
@@ -6,32 +6,60 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-windows:
     runs-on: windows-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
           pip install pyinstaller
           pip install -r requirements.txt
 
-      - name: Package with PyInstaller
+      - name: Build Windows EXE
         run: |
           pyinstaller --onefile main.py `
             --add-data "assets;assets" `
             --add-data "ProductData.csv;." `
             --add-data "BoughtProductData.csv;."
 
-      - name: Upload Executable
+      - name: Upload EXE
         uses: actions/upload-artifact@v4
         with:
           name: gui-app-exe
           path: dist/main.exe
+
+  build-macos:
+    runs-on: macos-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          pip install pyinstaller
+          pip install -r requirements.txt
+
+      - name: Build macOS Binary
+        run: |
+          pyinstaller --windowed --onefile main.py \
+            --add-data "assets:assets" \
+            --add-data "ProductData.csv:." \
+            --add-data "BoughtProductData.csv:."
+
+      - name: Upload macOS App
+        uses: actions/upload-artifact@v4
+        with:
+          name: gui-app-macos
+          path: dist/main
